--- a/ssrmu/detect.html
+++ b/ssrmu/detect.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="keywords" content="" />
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
-<link href="https://130130.xyz/assets/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="https://uuyun.me/assets/css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <link href="http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900" rel="stylesheet">
 </head>
 <body>
